crates/sqlx-turso/tests/ui/fail/scalar_requires_one_column.rs
fn main() {
    let _query = sqlx_turso::query_scalar!(
        "SELECT 1 AS \"id!: i64\", 'alice' AS \"name!\""
    );
}
